# claude-commands

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
commands/py/analyze-errors/: __init__.py  prompt.md
commands/py/db-migrate/: __init__.py  prompt.md
commands/py/ml-predict/: __init__.py  prompt.md
commands/ts/commit/: index.ts  prompt.md
commands/ts/gen-docs/: index.ts  prompt.md
commands/ts/lint-fix/: index.ts  prompt.md
commands/ts/review-pr/: index.ts  prompt.md
commands/ts/test-playwright/: index.ts  prompt.md
hooks/: post-tool.sh
src/: cli.ts  executor.ts  index.ts  registry.ts  types.ts
